suman and sathyam changes

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1469,6 +1469,7 @@ position: absolute;
   
   filter: gray;
   -webkit-filter: grayscale(100%);
+  min-height: 190px;
 }
 
 #team .member .details {
